# santa-lang-workshop

./: README.md  santa-claude-code  santa-codex
.github/workflows/: publish-website.yml  test-implementations.yml
examples/: advanced.santa  basics.santa  pipelines.santa
impl/c-claudecode-sonnet4-1757415006/: .gitignore  Dockerfile.build  Dockerfile.cli  JOURNAL  TASKS.md  build.mk  cli  evaluator.c  evaluator.h  lexer.c  lexer.h  main.c  parser.c  parser.h
impl/cplusplus-codex-gpt5-1757432341/: .gitignore  Dockerfile.build  Dockerfile.cli  JOURNAL  TASKS.md
impl/elixir-claudecode-sonnet4-1757661572/: .gitignore  Dockerfile.build  Dockerfile.cli  JOURNAL  TASKS.md  cli  mix.exs
impl/fsharp-claudecode-sonnet4-1757761598/: .gitignore  Dockerfile.build  Dockerfile.cli  Evaluator.fs  JOURNAL  Lexer.fs  Parser.fs  Program.fs  TASKS.md  cli  elf-lang.fsproj
impl/go-codex-gpt5-1757426072/: .gitignore  Dockerfile.build  Dockerfile.cli  JOURNAL  TASKS.md  go.mod
impl/haskell-codex-gpt5-1757943619/: .gitignore  Dockerfile.build  Dockerfile.cli  JOURNAL  TASKS.md  cli  elf.cabal
impl/haskell-codex-gpt5-1757943619/src/: Main.hs
impl/java-claudecode-sonnet4-1758028905/: .gitignore  Dockerfile.build  Dockerfile.cli  JOURNAL  Makefile  TASKS.md  cli
impl/python-claudecode-sonnet4-1757409766/: .gitignore  Dockerfile.build  Dockerfile.cli  JOURNAL  TASKS.md  cli  evaluator.py  lexer.py  parser.py
impl/ruby-claudecode-sonnet4-1757425857/: .gitignore  (+5 more)
specs/: LANG.md  TASKS.md
tools/: .gitignore  Cargo.toml
tools/src/: bootstrap.rs  journal.rs  site.rs  test.rs
(+100 files in other folders)
