[package]
name = "santa-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "santa-test"
path = "src/test.rs"

[[bin]]
name = "santa-bootstrap"
path = "src/bootstrap.rs"

[[bin]]
name = "santa-journal"
path = "src/journal.rs"

[[bin]]
name = "santa-site"
path = "src/site.rs"

[profile.release]
strip = true          # Remove debug symbols
codegen-units = 1     # Better optimization
lto = true           # Link-time optimization
opt-level = "z"      # Optimize for size
panic = "abort"      # Remove panic unwinding code

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.8"
similar = "2.3"
regex = "1.10"
atty = "0.2"
wait-timeout = "0.2"
rayon = "1.8"
users = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
html-escape = "0.2"
pulldown-cmark = "0.9"