cabal-version:       2.4
name:                elf
version:             0.1.0.0
build-type:          Simple

executable elf
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    base >=4.14 && <5,
                    aeson >=2.0,
                    aeson-pretty >=0.8,
                    bytestring,
                    text,
                    containers
  ghc-options:      -O2 -Wall
